--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "liveServer.settings.port": 5501,
-    "python.pythonPath": "C:\\ProgramData\\Anaconda3\\python.exe"
+    "liveServer.settings.port": 5501
 }
